--- a/Testing/Views/Product/Index.cshtml
+++ b/Testing/Views/Product/Index.cshtml
@@ -3,7 +3,7 @@
 <h2>Products</h2>
 <table class="table">
     <tr>
-        <th>ID</th>
+        <th>Product ID</th>
         <th>Name</th>
         <th>Price</th>
         <th>Category ID</th>
